"just another commit"

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         }
         #more{
             background: #6495ed;
+            display:none;
         }
     </style>
     <body>
@@ -64,7 +65,7 @@
             <div class="row">
                 <div class="col offset-s6 l6 offset-l6"></div>
                 <div class ="col offset-s6 l6 offset-l6">
-                <button style="margin-top:20px" class="cyan lighten-3 black-text center-align pulse large btn-medium btn-floating"> 
+                <button  id ="showmore" style="margin-top:20px" class="cyan lighten-3 black-text center-align pulse large btn-medium btn-floating"> 
                     <i class="animated bounce large material-icons">expand_more</i>
                 </button>
                 </div>
@@ -73,15 +74,17 @@
             <div class="row">
                 <div class="col s12 m4 l4">
         <article id ="collaborate">
-          <div class="card">
-            <div class="card-image">
-              <img class="responsive-img" src="http://media.whattheythink.com.s3.amazonaws.com/images/2016-04-peer-collaboration-optimization-print-software-2.jpg">
-              <span class="card-title">Easy collaborations<i class ="card-title small material-icons">group_add</i></span>
-            </div>
-            <div class="card-content">
-              <h4>With boxfile collaboration on coursework becomes easy as each additions to a file is updated in realtime to others members joined to a group work project</h4>
-            </div>
-          </div>
+          <div class="card horizontal">
+      <div class="card-image">
+        <img src="http://media.whattheythink.com.s3.amazonaws.com/images/2016-04-peer-collaboration-optimization-print-software-2.jpg">
+      </div>
+      <div class="card-stacked">
+        <div class="card-content">
+            <h4>Boxfile makes collaboration with group members, Coursemates an easy go
+            file changes to group work is immediately updated and synchronized in real time to group members</h4>
+        </div>
+      </div>
+    </div> 
             </article>
                 </div>
             <div class="col s12 m4 l4">
@@ -98,9 +101,36 @@
     </div>
         </article>
                 </div>
+                </div>
+        <div class="row">
+            <div class="col s12 m4 l4">
         <article id ="passport">
-            
+             <div class="card">
+        <div class="card-image">
+          <img src="https://thumbs.dreamstime.com/b/beautiful-young-woman-working-computer-cafe-drinking-coffee-typing-keyboard-close-up-72765494.jpg">
+          <span class="card-title">Quick type</span>
+          <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+        </div>
+        <div class="card-content">
+            <h4>All of your university documents can be typed, edited, saved and even printed to you all On Boxfile!!!!</h4>
+        </div>
+      </div>
         </article>
+            </div>
+            <div class="col s12 m4 l4">
+            <article>
+                 <div class="card horizontal">
+      <div class="card-image">
+        <img src="image/Graphicloads-100-Flat-Share-2.ico">
+      </div>
+      <div class="card-stacked">
+        <div class="card-content">
+            <h4>Handouts,Assignments and important documents can be shared to anyone on campus to make photocopy, plus you get a free printing when they do </h4>
+        </div>
+      </div>
+    </div>   
+            </article>
+            </div>
                 </div>
         </section>
             </article>
