Included jquery library

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href ="css/animate%20.css">
         <link rel="stylesheet" href="css/main.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons", rel="stylesheet">
-        <script src="main.js"></script>
+        <script src="scripts/main.js"></script>
         
         <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -40,6 +40,11 @@
             display:none;
         }
     </style>
+    <script>
+        $(document).ready(function(){
+    alert("working");
+});
+    </script>
     <body>
         <header>
             <h1 class="center-align">BOXFILE</h1>
