--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 </div>
                 <div class="input-field">
                     <i class="material-icons prefix">phone</i>
-                    <input id ="phone" name="phone" type="tel" placehoder="Enter your telephone number" required>
+                    <input id ="phone" name="phone" type="text" placehoder="Enter your telephone number" required>
                     <label for="phone">Number</label>
                 </div>
                 <div class="input-field">
